--- a/MockSite/index.html
+++ b/MockSite/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="index.js"></script>
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </head>
   <body></body>
 </html>
